# My-Codespace

./: .gitignore  README.md  pyproject.toml  requirements.txt
municipal_assistant/: cli.py  db.py  models.py
office_assistant/: __init__.py  api.py
