[project]
name = "office-assistant"
version = "0.1.0"
description = "CLI and API for office office tasks"
authors = [{ name="Onehand Coding", email="onehand.coding433@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "typer==0.12.3",
  "click==8.1.7",
  "rich==13.7.1",
  "sqlmodel==0.0.21",
  "uvicorn==0.30.1",
  "fastapi==0.111.0",
  "pydantic==2.7.3",
]

[project.scripts]
office-assistant = "office_assistant.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["office_assistant*"]
exclude = ["data*", "tests*"]
